--- a/index.html
+++ b/index.html
@@ -1,15 +1,45 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <link rel="stylesheet" href="css/reset.css" />
+    <link
+            href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;700;800;900&display=swap"
+            rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Car Sharing</title>
 </head>
+<body></body>
 <body>
-
+<main>
+    <section id="home" class="home">
+        <div class="home__background">
+            <div class="container">
+                <h1 class="home__heading">Car Sharing</h1>
+                <p class="home__paragraph">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                    enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                    nisi ut aliquip ex ea commodo consequat.
+                </p>
+                <div class="home__buttons">
+                    <button class="home__button home__button--red">
+                        Share a car
+                    </button>
+                    <button class="home__button home__button--white">
+                        Key features
+                    </button>
+                </div>
+            </div>
+        </div>
+    </section>
+</main>
 </body>
 </html>
