--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
             href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;700;800;900&display=swap"
             rel="stylesheet"
     />
+    <link
+            href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap"
+            rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/style.css" />
     <title>Car Sharing</title>
 </head>
@@ -61,6 +65,67 @@
                 <div class="home__buttons">
                     <a class="button button--primary button--lg"> Share a car </a>
                     <a class="button button--secondary button--lg"> Key features </a>
+                </div>
+            </div>
+        </div>
+        <a class="button button--primary button--icon home__arrow" href="#blog">
+            <img src="images/Icon%20Arrow%20Down.png" width="21px" alt="21px" />
+        </a>
+    </section>
+
+    <section id="blog" class="blog">
+        <header>
+            <h2 class="blog__heading">Blog</h2>
+        </header>
+
+        <div class="container">
+            <div class="blog__columns">
+                <div class="card blog__column">
+                    <img
+                            class="card__image"
+                            src="images/photo1.png"
+                            alt="first photo"
+                    />
+                    <div class="card__title">Lorem ipsum sit dolar</div>
+                    <div class="card__content">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                        eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    </div>
+                    <div class="card__footer">
+                        <button class="button button--primary">Read more</button>
+                    </div>
+                </div>
+
+                <div class="card blog__column">
+                    <img
+                            class="card__image"
+                            src="images/photo2.png"
+                            alt="second photo"
+                    />
+                    <div class="card__title">Lorem ipsum sit dolar</div>
+                    <div class="card__content">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                        eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    </div>
+                    <div class="card__footer">
+                        <button class="button button--primary">Read more</button>
+                    </div>
+                </div>
+
+                <div class="blog__column card">
+                    <img
+                            class="card__image"
+                            src="images/photo3.png"
+                            alt="third photo"
+                    />
+                    <div class="card__title">Lorem ipsum sit dolar</div>
+                    <div class="card__content">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                        eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    </div>
+                    <div class="card__footer">
+                        <button class="button button--primary">Read more</button>
+                    </div>
                 </div>
             </div>
         </div>
